# ezrecords

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml
_docs/: Makefile  code.rst  conf.py  index.rst
docs/: conf.py  index.html  index.rst  objects.inv
docs/_static/: documentation_options.js
ezrecords/: __init__.py  abstractdb.py  cli.py  compat.py  mysqldb.py  postgresdb.py  records.py  sqlitedb.py  util.py
tests/: sample_query.sql  test_ezrecords.py  test_mysqldb.py  test_postgresdb.py  test_sqlitedb.py  test_util.py
